[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
root = "."

[project]
name = "select_options"
dynamic = ["version"]
description = "A simple library for creating interactive selection menus in terminal applications."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Gerard Vello", email = "gerard.vello@gmail.com" }]
license = "MIT"
requires-python = ">=3.7"
dependencies = ["textual"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
